# stock-manager

./: .env  Cargo.toml  create_migration.bat  docker-compose.yml  init-db.sh  rustfmt.toml
auth/: .env  Cargo.toml  build.rs  refinery.toml
auth/migrations/: 20250524125122_create_users_table.up.sql  20250529204248_create_uniqueness_index_for_email.down.sql  20250529204248_create_uniqueness_index_for_email.up.sql  U1__create_users_table.sql
auth/src/: main.rs
auth/src/db/: mod.rs
auth/src/domain/: claims.rs  events.rs  mod.rs  user.rs
auth/src/handlers/: user_handler.rs
auth/src/repository/: user_repository.rs
auth/src/routes/: mod.rs  user.rs
auth/src/services/: database.rs
history/: .env  Cargo.toml
history/src/: event_consumer.rs  main.rs
history/src/db/: mod.rs
history/src/domain/: event.rs  mod.rs
history/src/handlers/: event_handler.rs
history/src/repository/: event_repository.rs  mod.rs
history/src/routes/: event.rs  mod.rs
history/src/services/: database.rs  event_queue.rs  mod.rs
src/: main.rs
src/db/: mod.rs
src/handlers/: item_handler.rs  mod.rs
src/routes/: item.rs
stock/: .env  Cargo.toml
stock/migrations/: 20250524181815_create_items_table.down.sql  20250524181815_create_items_table.up.sql
stock/src/: main.rs
stock/src/db/: mod.rs
stock/src/domain/: item.rs  models.rs
stock/src/handlers/: item_handler.rs
stock/src/repository/: item_repository.rs  mod.rs
stock/src/routes/: mod.rs
stock/src/services/: database.rs
