[package]
name = "armazenamento-itens-ms"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server
axum = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialização e deserialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging estruturado
tracing = "0.1"
tracing-subscriber = "0.3"

# Requisições HTTP (útil para comunicação entre microsserviços)
reqwest = { version = "0.11", features = ["json"] }

# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15"
chrono = "0.4"
