[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"

bcrypt = "0.17"

chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15.7"

jsonwebtoken = "9.3"
lapin = "2.5"
rand = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }

tokio = { version = "1.45", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"
